Support projections in the example Python API implementation
